--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,48 +14,30 @@ env:
   IMAGE_NAME: telestream-insights-hub
 
 jobs:
-  # ============================================
-  # CODE QUALITY & LINTING
-  # ============================================
+  # ===================== CODE QUALITY =====================
   code-quality:
     name: Code Quality Checks
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
 
-      - name: Install dependencies
-        run: |
+      - run: |
           pip install --upgrade pip
           pip install flake8 black isort mypy bandit safety
 
-      - name: Run Black (code formatting)
-        run: black --check processing/ api/ tests/
+      - run: black --check processing/ api/ tests/
+      - run: isort --check-only processing/ api/ tests/
+      - run: flake8 processing/ api/ tests/ --max-line-length=120 --extend-ignore=E203,W503
+      - run: mypy processing/ api/ --ignore-missing-imports || true
+      - run: bandit -r processing/ api/ -ll
+      - run: safety check --json
 
-      - name: Run isort (import sorting)
-        run: isort --check-only processing/ api/ tests/
-
-      - name: Run Flake8 (linting)
-        run: flake8 processing/ api/ tests/ --max-line-length=120 --extend-ignore=E203,W503
-
-      - name: Run MyPy (type checking)
-        run: mypy processing/ api/ --ignore-missing-imports || true
-
-      - name: Run Bandit (security)
-        run: bandit -r processing/ api/ -ll
-
-      - name: Check dependencies for vulnerabilities
-        run: safety check --json
-
-  # ============================================
-  # UNIT TESTS
-  # ============================================
+  # ======================= UNIT TESTS ======================
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -63,35 +45,29 @@ jobs:
       matrix:
         python-version: ['3.9', '3.10', '3.11']
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
 
-      - name: Install Java (for PySpark)
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          distribution: temurin
+          java-version: 11
 
-      - name: Install dependencies
-        run: |
+      - run: |
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-cov pytest-asyncio pytest-xdist
 
-      - name: Run unit tests
-        run: |
+      - run: |
           pytest tests/unit/ \
             -v \
             --cov=processing \
             --cov=api \
             --cov-report=xml:coverage.xml \
-            --cov-report=html \
             --cov-report=term \
             --junit-xml=test-results.xml \
             -n auto
@@ -110,11 +86,9 @@ jobs:
           name: test-results-${{ matrix.python-version }}
           path: |
             test-results.xml
-            htmlcov/
+            coverage.xml
 
-  # ============================================
-  # INTEGRATION TESTS
-  # ============================================
+  # ==================== INTEGRATION TESTS ==================
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
@@ -125,167 +99,121 @@ jobs:
           POSTGRES_USER: telestream
           POSTGRES_PASSWORD: telestream123
           POSTGRES_DB: telestream_dw
-        ports:
-          - 5432:5432
+        ports: [5432:5432]
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd pg_isready --health-interval 10s
+          --health-timeout 5s --health-retries 5
 
       redis:
         image: redis:7-alpine
-        ports:
-          - 6379:6379
+        ports: [6379:6379]
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
 
-      kafka:
-        image: confluentinc/cp-kafka:7.6.0
-        ports:
-          - 9092:9092
-        env:
-          KAFKA_BROKER_ID: 1
-          KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-          KAFKA_PROCESS_ROLES: broker,controller
-          KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
-          KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
 
-      - name: Install Java
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          distribution: temurin
+          java-version: 11
 
-      - name: Install dependencies
-        run: |
+      - run: |
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-asyncio
 
-      - name: Initialize database schema
-        run: |
+      - run: |
           PGPASSWORD=telestream123 psql -h localhost -U telestream -d telestream_dw -f tests/fixtures/schema.sql
 
-      - name: Run integration tests
-        env:
+      - env:
           DB_HOST: localhost
           DB_PORT: 5432
           DB_USER: telestream
           DB_PASSWORD: telestream123
           DB_NAME: telestream_dw
           REDIS_URL: redis://localhost:6379
-          KAFKA_BROKERS: localhost:9092
         run: |
-          pytest tests/integration/ \
-            -v \
-            -m integration \
-            --junit-xml=integration-results.xml
+          pytest tests/integration/ -v --junit-xml=integration-results.xml
 
-      - name: Upload integration test results
-        if: always()
+      - if: always()
         uses: actions/upload-artifact@v4
         with:
           name: integration-test-results
           path: integration-results.xml
 
-  # ============================================
-  # DATA QUALITY TESTS
-  # ============================================
+  # ==================== DATA QUALITY TESTS =================
   data-quality-tests:
-    name: Data Quality Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
 
-      - name: Install dependencies
-        run: |
+      - run: |
           pip install --upgrade pip
           pip install great_expectations pandas pyspark
 
-      - name: Validate data quality expectations
-        run: |
-          python -c "
+      - run: |
+          python - <<'PY'
           from great_expectations.data_context import DataContext
-          context = DataContext('./great_expectations')
-          results = context.run_checkpoint(checkpoint_name='test_checkpoint')
-          assert results.success, 'Data quality checks failed'
-          "
+          ctx = DataContext('./great_expectations')
+          result = ctx.run_checkpoint(checkpoint_name='test_checkpoint')
+          assert result.success, "Data quality checks failed"
+          PY
 
-  # ============================================
-  # SECURITY SCANNING
-  # ============================================
+  # ====================== SECURITY SCAN ====================
   security-scan:
-    name: Security Scanning
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Run Trivy vulnerability scanner
+      - name: Trivy file scan
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          scan-type: fs
+          scan-ref: .
+          format: sarif
+          output: trivy-results.sarif
 
-      - name: Upload Trivy results to GitHub Security
+      - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: trivy-results.sarif
 
-      - name: Run Snyk security scan
+      - name: Snyk scan
         uses: snyk/actions/python@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --severity-threshold=high
 
-  # ============================================
-  # BUILD DOCKER IMAGES
-  # ============================================
+  # ====================== BUILD DOCKER =====================
   build-docker:
-    name: Build Docker Images
     runs-on: ubuntu-latest
     needs: [code-quality, unit-tests]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
+      - id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.DOCKER_REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}
@@ -293,8 +221,7 @@ jobs:
             type=ref,event=branch
             type=sha
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
@@ -306,154 +233,20 @@ jobs:
             PYTHON_VERSION=${{ env.PYTHON_VERSION }}
             SPARK_VERSION=${{ env.SPARK_VERSION }}
 
-      - name: Run Trivy on Docker image
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ steps.meta.outputs.tags }}
-          format: 'sarif'
-          output: 'trivy-image-results.sarif'
-
-  # ============================================
-  # DEPLOY TO STAGING
-  # ============================================
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: [integration-tests, build-docker]
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-    environment:
-      name: staging
-      url: https://staging.telestream.io
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Update kubeconfig
-        run: aws eks update-kubeconfig --name telestream-staging --region us-east-1
-
-      - name: Deploy with Helm
-        run: |
-          helm upgrade --install telestream ./infrastructure/kubernetes/helm/telestream \
-            --namespace telestream-staging \
-            --create-namespace \
-            --values infrastructure/kubernetes/helm/values-staging.yaml \
-            --set image.tag=${{ github.sha }} \
-            --wait --timeout 10m
-
-      - name: Run smoke tests
-        run: |
-          kubectl run smoke-test \
-            --namespace telestream-staging \
-            --image=curlimages/curl:latest \
-            --rm -it --restart=Never \
-            -- curl -f http://telestream-api:8000/health
-
-  # ============================================
-  # DEPLOY TO PRODUCTION
-  # ============================================
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [deploy-staging]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    environment:
-      name: production
-      url: https://telestream.io
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Update kubeconfig
-        run: aws eks update-kubeconfig --name telestream-prod --region us-east-1
-
-      - name: Deploy with Helm (Blue-Green)
-        run: |
-          helm upgrade --install telestream-green ./infrastructure/kubernetes/helm/telestream \
-            --namespace telestream-prod \
-            --values infrastructure/kubernetes/helm/values-prod.yaml \
-            --set image.tag=${{ github.sha }} \
-            --set nameOverride=telestream-green \
-            --wait --timeout 15m
-
-          kubectl wait --for=condition=ready pod -l app=telestream-green -n telestream-prod --timeout=300s
-
-          kubectl patch service telestream-api -n telestream-prod --type merge -p '{"spec":{"selector":{"app":"telestream-green"}}}'
-
-          sleep 30
-          helm uninstall telestream-blue -n telestream-prod || true
-
-      - name: Run production smoke tests
-        run: |
-          curl -f https://telestream.io/health
-          curl -f https://telestream.io/api/v1/metrics/realtime -H "X-API-Key: ${{ secrets.PROD_API_KEY }}"
-
-      - name: Notify deployment success
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          text: 'Production deployment successful! :rocket:'
-          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
-        if: success()
-
-      - name: Rollback on failure
-        if: failure()
-        run: |
-          kubectl patch service telestream-api -n telestream-prod --type merge -p '{"spec":{"selector":{"app":"telestream-blue"}}}'
-          helm uninstall telestream-green -n telestream-prod
-
-      - name: Notify deployment failure
-        uses: 8398a7/action-slack@v3
-        with:
-          status: 'failure'
-          text: 'Production deployment failed! Rolling back... :warning:'
-          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
-        if: failure()
-
-  # ============================================
-  # CLEANUP AND NOTIFICATION
-  # ============================================
-  cleanup:
-    name: Cleanup Old Artifacts
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-      - name: Delete old artifacts
-        uses: c-hive/gha-remove-artifacts@v1
-        with:
-          age: '7 days'
-          skip-recent: 5
-
-      - name: Clean up old Docker images
-        run: echo "Cleanup would happen here in production"
-
+  # ======================== NOTIFY ========================
   notify:
-    name: Send Notifications
     runs-on: ubuntu-latest
-    needs: [deploy-production]
     if: always()
     steps:
-      - name: Send Slack notification
+      - name: Slack Notification
         uses: 8398a7/action-slack@v3
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
         with:
           status: ${{ job.status }}
           fields: repo,message,commit,author,action,eventName,ref,workflow
-          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
 
-      - name: Send email notification
+      - name: Email Notification
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
