--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,120 @@
-# Core Python & Data
-pandas==2.2.2
-numpy==1.26.4
+# # Core Python & Data
+# pandas==2.2.2
+# numpy==1.26.4
 
-# PySpark & Delta Lake
-pyspark==3.5.0
-delta-spark==3.2.0
+# # PySpark & Delta Lake
+# pyspark==3.5.0
+# delta-spark==3.2.0
 
-# API Layer (FastAPI)
-fastapi==0.115.0
-uvicorn==0.28.0
+# # API Layer (FastAPI)
+# fastapi==0.115.0
+# uvicorn==0.28.0
 
-pydantic==2.9.0
-python-multipart==0.0.9
+# pydantic==2.9.0
+# python-multipart==0.0.9
 
-# Streaming & Message Brokers
+# # Streaming & Message Brokers
+# kafka-python==2.0.2
+
+# # Workflow Orchestration
+# apache-airflow==2.10.1
+# prefect==2.19.5
+
+# # Database Connectivity
+# psycopg2-binary==2.9.9
+# # SQLAlchemy==2.0.34
+# SQLAlchemy>=1.4.36,<2.0
+
+
+# # Data Quality & Validation
+# great-expectations==0.18.12
+
+# # Testing & Coverage
+# pytest==8.4.2
+# pytest-cov==7.0.0
+# pytest-asyncio==0.23.8
+# pytest-xdist==3.6.1
+# anyio==4.8.0
+
+# # Security & Linting
+# flake8==7.1.1
+# black==24.8.0
+# isort==5.13.2
+# bandit==1.7.8
+# safety==3.2.3
+# mypy==1.10.0
+# ruff==0.5.6
+
+# # Cloud & Deployment Utilities
+# boto3==1.34.140
+# docker==7.1.0
+
+# # Optional - Logging, Utils
+# loguru==0.7.2
+# python-dotenv==1.0.1
+# requests==2.32.3
+# tenacity==8.2.3
+
+# fastapi-limiter==0.1.5
+# fastapi-limiter==0.1.5
+
+
+
+
+# Core Framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# Authentication & Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
+# Database
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
+
+# Caching & Message Queue
+redis==5.0.1
 kafka-python==2.0.2
 
-# Workflow Orchestration
-apache-airflow==2.10.1
-prefect==2.19.5
+# Data Processing
+pyspark==3.5.0
+pandas==2.1.3
+numpy==1.26.2
+pyarrow==14.0.1
 
-# Database Connectivity
-psycopg2-binary==2.9.9
-# SQLAlchemy==2.0.34
-SQLAlchemy>=1.4.36,<2.0
+# Data Quality
+great-expectations==0.18.8
 
+# Orchestration
+apache-airflow==2.7.3
+prefect==2.14.9
 
-# Data Quality & Validation
-great-expectations==0.18.12
+# AWS/Cloud (optional but good to have)
+boto3==1.29.7
+s3fs==2023.12.0
 
-# Testing & Coverage
-pytest==8.4.2
-pytest-cov==7.0.0
-pytest-asyncio==0.23.8
-pytest-xdist==3.6.1
-anyio==4.8.0
+# Testing
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-asyncio==0.21.1
+pytest-xdist==3.5.0
+pytest-mock==3.12.0
 
-# Security & Linting
-flake8==7.1.1
-black==24.8.0
+# Code Quality
+black==23.12.0
+flake8==6.1.0
 isort==5.13.2
-bandit==1.7.8
-safety==3.2.3
-mypy==1.10.0
-ruff==0.5.6
+mypy==1.7.1
+bandit==1.7.5
+safety==2.3.5
 
-# Cloud & Deployment Utilities
-boto3==1.34.140
-docker==7.1.0
-
-# Optional - Logging, Utils
-loguru==0.7.2
-python-dotenv==1.0.1
-requests==2.32.3
-tenacity==8.2.3
-
-fastapi-limiter==0.1.5
-fastapi-limiter==0.1.5
+# Utilities
+python-dotenv==1.0.0
+requests==2.31.0
+aiohttp==3.9.1
+pyyaml==6.0.1
