--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,3 @@
-# # Core Python & Data
-# pandas==2.2.2
-# numpy==1.26.4
-
-# # PySpark & Delta Lake
-# pyspark==3.5.0
-# delta-spark==3.2.0
-
-# # API Layer (FastAPI)
-# fastapi==0.115.0
-# uvicorn==0.28.0
-
-# pydantic==2.9.0
-# python-multipart==0.0.9
-
-# # Streaming & Message Brokers
-# kafka-python==2.0.2
-
-# # Workflow Orchestration
-# apache-airflow==2.10.1
-# prefect==2.19.5
-
-# # Database Connectivity
-# psycopg2-binary==2.9.9
-# # SQLAlchemy==2.0.34
-# SQLAlchemy>=1.4.36,<2.0
-
-
-# # Data Quality & Validation
-# great-expectations==0.18.12
-
-# # Testing & Coverage
-# pytest==8.4.2
-# pytest-cov==7.0.0
-# pytest-asyncio==0.23.8
-# pytest-xdist==3.6.1
-# anyio==4.8.0
-
-# # Security & Linting
-# flake8==7.1.1
-# black==24.8.0
-# isort==5.13.2
-# bandit==1.7.8
-# safety==3.2.3
-# mypy==1.10.0
-# ruff==0.5.6
-
-# # Cloud & Deployment Utilities
-# boto3==1.34.140
-# docker==7.1.0
-
-# # Optional - Logging, Utils
-# loguru==0.7.2
-# python-dotenv==1.0.1
-# requests==2.32.3
-# tenacity==8.2.3
-
-# fastapi-limiter==0.1.5
-# fastapi-limiter==0.1.5
-
-
-
-
 # Core Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
@@ -94,7 +31,7 @@ great-expectations==0.18.8
 apache-airflow==2.7.3
 prefect==2.14.9
 
-# AWS/Cloud (optional but good to have)
+# AWS/Cloud
 boto3==1.29.7
 s3fs==2023.12.0
 
