--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 # Core Framework
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+# uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+uvicorn==0.30.1
+
+
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
@@ -12,7 +15,7 @@ python-multipart==0.0.6
 # Database
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
+SQLAlchemy==2.0.34
 
 # Caching & Message Queue
 redis==5.0.1
@@ -55,3 +58,4 @@ python-dotenv==1.0.0
 requests==2.31.0
 aiohttp==3.9.1
 pyyaml==6.0.1
+
