--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,68 @@
+# ===========================
 # Core Framework
+# ===========================
 fastapi==0.104.1
-# uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
-uvicorn==0.30.1
+uvicorn==0.28.1  # Compatible with Prefect (<0.29.0)
 
-
-
+# ===========================
 # Authentication & Security
+# ===========================
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 
+# ===========================
 # Database
+# ===========================
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
-SQLAlchemy==2.0.34
+SQLAlchemy>=1.4.28,<2.0  # Compatible with Airflow 2.7.3
 
+# ===========================
 # Caching & Message Queue
+# ===========================
 redis==5.0.1
 kafka-python==2.0.2
 
+# ===========================
 # Data Processing
+# ===========================
 pyspark==3.5.0
 pandas==2.1.3
 numpy==1.26.2
 pyarrow==14.0.1
 
+# ===========================
 # Data Quality
+# ===========================
 great-expectations==0.18.8
 
+# ===========================
 # Orchestration
+# ===========================
 apache-airflow==2.7.3
 prefect==2.14.9
 
+# ===========================
 # AWS/Cloud
+# ===========================
 boto3==1.29.7
 s3fs==2023.12.0
 
+# ===========================
 # Testing
+# ===========================
 pytest==7.4.3
 pytest-cov==4.1.0
 pytest-asyncio==0.21.1
 pytest-xdist==3.5.0
 pytest-mock==3.12.0
 
+# ===========================
 # Code Quality
+# ===========================
 black==23.12.0
 flake8==6.1.0
 isort==5.13.2
@@ -53,9 +70,10 @@ mypy==1.7.1
 bandit==1.7.5
 safety==2.3.5
 
+# ===========================
 # Utilities
+# ===========================
 python-dotenv==1.0.0
 requests==2.31.0
 aiohttp==3.9.1
 pyyaml==6.0.1
-
